# opencl

./: .gitignore  CMakeLists.txt  Makefile
common/: CMakeLists.txt  common.cpp  common.h
platform_info/: CMakeLists.txt  main.cpp
